--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   redis:
     image: redis:7-alpine
@@ -20,7 +18,18 @@ services:
     restart: always
     env_file:
       - ./services/api/.env
-    ports:
-      - "8000:8000"
     depends_on:
       - redis
+
+  frontend:
+    build: ./frontend
+    restart: always
+
+  nginx:
+    build: ./nginx
+    restart: always
+    ports:
+      - "80:80"
+    depends_on:
+      - api
+      - frontend
