--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,4 @@ jobs:
           script: |
             cd /var/www/airplanetracker
             git pull origin master
-            docker-compose down --remove-orphans
-            docker-compose up --build -d
+            docker-compose up --build -d --no-deps frontend
