--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,4 @@ jobs:
             cd /var/www/airplanetracker
             git pull origin master
             docker-compose up --build -d --no-deps frontend
+            docker-compose up --build -d --no-deps tracker
