--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,24 @@ services:
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
-
   tracker:
     build: ./services/tracker
     restart: always
     env_file:
       - ./services/tracker/.env
+    volumes:
+      - sqlite_data:/data
     depends_on:
       - redis
-
   api:
     build: ./services/api
     restart: always
     env_file:
       - ./services/api/.env
+    volumes:
+      - sqlite_data:/data
     depends_on:
       - redis
-
   frontend:
     build: ./frontend
     restart: always
@@ -31,7 +32,6 @@ services:
       - "8080:80"
     depends_on:
       - api
-
   bot:
     build: ./services/bot
     restart: always
@@ -39,6 +39,6 @@ services:
       - ./services/bot/.env
     depends_on:
       - api
-
 volumes:
   redis_data:
+  sqlite_data:
